test/resources/nameAnalyzer/passing/NotDuplicateLocals1.amy
object Locals
  def foo(): Int(32) :=
    if (true) then
      val i: Int(32) = 42;
      i
    else 
      val i: Int(32) = 42;
      i
    end if
  end foo
end Locals
