test/resources/nameAnalyzer/failing/ArgumentNumberFunction.amy
object Args
  def foo(i: Int(32)): Int(32) := foo(1, 2) end foo
end Args
